--- a/attendance/templates/principal/settings.html
+++ b/attendance/templates/principal/settings.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}School Settings{% endblock %}
+{% block title %}Principal Board - School Settings{% endblock %}
 
 {% block content %}
 <div class="px-4 sm:px-0">
